[package]
name = "morph-endo"
version = "0.1.0"
authors = ["Pavel.Sergeev <pavel.sergeev@jetbrains.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
linkme = "*"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.6.4"
xi-rope = "0.3.0"

eframe = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }


[[bin]]
name = "main"
path = "src/main.rs"